[tool.poetry]
name = "dss"
version = "0.1.0"
description = ""
authors = ["Pompeiro <maciejgojlikdjango@gmail.com>", "Pompeiro <pompeiro10@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2-binary = "^2.9.5"
sqlmodel = "^0.0.8"
playwright = "^1.28.0"
pyautogui = "^0.9.53"
python-xlib = "^0.33"
pillow = "^9.4.0"
opencv-python = "4.5.5.62"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.3"
black = "^22.12.0"
mypy = "^0.991"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "too-few-public-methods"
]
extension-pkg-whitelist = ["pydantic"]
good-names=["db", "w", "h", "pt"]
ignored-modules = ["cv2"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_explicit = true
no_implicit_optional = true
